--- a/web/index.html
+++ b/web/index.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <!-- If you serve from a sub-path, adjust this as needed -->
-  <base href="$FLUTTER_BASE_HREF">
+  <head>
+    <!-- If you serve from a sub-path, adjust this as needed -->
+    <base href="$FLUTTER_BASE_HREF" />
 
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="description" content="mobile assignment">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <meta name="description" content="mobile assignment" />
 
-  <!-- iOS meta tags & icons -->
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="gov_citizen_app">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+    <!-- iOS meta tags & icons -->
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="Sawtak" />
+    <link rel="apple-touch-icon" href="favicon.png" />
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>gov_citizen_app</title>
-  <link rel="manifest" href="manifest.json">
+    <title>gov_citizen_app</title>
+    <link rel="manifest" href="manifest.json" />
 
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
+    <!-- Firebase SDKs -->
+    <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
 
-  <!-- reCAPTCHA V2 -->
-  <script src="https://www.google.com/recaptcha/api.js"></script>
-</head>
-<body>
-  <!-- This script installs service_worker.js to provide PWA functionality to
+    <!-- reCAPTCHA V2 -->
+    <script src="https://www.google.com/recaptcha/api.js"></script>
+  </head>
+  <body>
+    <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
-  <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js');
-      });
-    }
-  </script>
+    <script>
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", function () {
+          navigator.serviceWorker.register("flutter_service_worker.js");
+        });
+      }
+    </script>
 
-  <!-- reCAPTCHA container -->
-  <div id="recaptcha-container"></div>
+    <!-- reCAPTCHA container -->
+    <div id="recaptcha-container"></div>
 
-  <script src="main.dart.js" type="application/javascript"></script>
-</body>
+    <script src="main.dart.js" type="application/javascript"></script>
+  </body>
 </html>
